fixes assistant not showing in dayview bug

--- a/dentist_react/src/components/Home.css
+++ b/dentist_react/src/components/Home.css
@@ -8,6 +8,9 @@
   margin: 20px 10px;
   padding: 10px;
 }
+.add {
+  margin-top:100px;
+}
 
 button {
   margin: 3px;
